Add categoty buttons to every productcard

--- a/index.html
+++ b/index.html
@@ -125,9 +125,12 @@
               src="/Assets/images/products/gurka.jpg"
               alt="Produktbild på gurkor"
             />
-            <!-- <button class="btn">Blommor</button>
-            <button class="btn">Ätbart</button>
-            <button class="btn">Grönska</button> -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Blommor</button>
+              <button class="btn category-btn">Ätbart</button>
+              <button class="btn category-btn">Grönska</button>
+            </div>
+
             <h3>Gurka</h3>
             <p>
               Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
@@ -142,8 +145,12 @@
               src="/Assets/images/products/tomat.jpg"
               alt="Produktbild på tomater"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Solälskande Lättodlat Ätbart -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Solälskande</button>
+              <button class="btn category-btn">Lättodlat</button>
+              <button class="btn category-btn">Ätbart</button>
+            </div>
+
             <h3>Tomat</h3>
             <p>
               En perfekt grönsak att odla på balkongen eller i trädgården. Ger
@@ -157,8 +164,13 @@
               src="/Assets/images/products/pelargon.jpg"
               alt="Produktbild på rosa pelargoner"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Dekorativ Färgstark Tålig Blommor -->
+
+            <div class="category-btn-container">
+              <button class="btn category-btn">Dekorativ</button>
+              <button class="btn category-btn">Färgstark</button>
+              <button class="btn category-btn">Tålig</button>
+              <button class="btn category-btn">Blommor</button>
+            </div>
             <h3>Pelargon</h3>
             <p>
               En vacker och lättskött blomma som trivs både inne och ute under
@@ -172,8 +184,12 @@
               src="/Assets/images/products/basilika.jpg"
               alt="Produktbild på basilika"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!--  Kryddor Doftande Solälskande -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Kryddor</button>
+              <button class="btn category-btn">Doftande</button>
+              <button class="btn category-btn">Solälskande</button>
+            </div>
+
             <h3>Basilika</h3>
             <p>
               En fantastisk krydda för pastarätter och sallader. Trivs bäst i
@@ -187,8 +203,11 @@
               src="/Assets/images/products/sallad.jpg"
               alt="Produktbild på isbergssallad"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Snabbväxande Ätbart Grönska  -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Snabbväxande</button>
+              <button class="btn category-btn">Ätbart</button>
+              <button class="btn category-btn">Grönska</button>
+            </div>
             <h3>Sallad</h3>
             <p>
               Sallad är en av de enklaste grönsakerna att odla och ger snabba
@@ -202,8 +221,11 @@
               src="/Assets/images/products/ormbunke.jpg"
               alt="Produktbild på ormbunke"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!--  Luftfuktande Grönska Dekorativ  -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Luftfuktande</button>
+              <button class="btn category-btn">Grönska</button>
+              <button class="btn category-btn">Dekorativ</button>
+            </div>
             <h3>Ormbunke</h3>
             <p>
               En klassisk växt som passar perfekt i badrummet eller på skuggiga
@@ -217,8 +239,12 @@
               src="/Assets/images/products/gurka.jpg"
               alt="Produktbild på gurkor"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Blommor Ätbart Grönska -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Blommor</button>
+              <button class="btn category-btn">Ätbart</button>
+              <button class="btn category-btn">Grönska</button>
+            </div>
+
             <h3>Gurka</h3>
             <p>
               Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
@@ -233,8 +259,12 @@
               src="/Assets/images/products/tomat.jpg"
               alt="Produktbild på tomater"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Solälskande Lättodlat Ätbart -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Solälskande</button>
+              <button class="btn category-btn">Lättodlat</button>
+              <button class="btn category-btn">Ätbart</button>
+            </div>
+
             <h3>Tomat</h3>
             <p>
               En perfekt grönsak att odla på balkongen eller i trädgården. Ger
@@ -248,8 +278,13 @@
               src="/Assets/images/products/pelargon.jpg"
               alt="Produktbild på rosa pelargoner"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Dekorativ Färgstark Tålig Blommor -->
+
+            <div class="category-btn-container">
+              <button class="btn category-btn">Dekorativ</button>
+              <button class="btn category-btn">Färgstark</button>
+              <button class="btn category-btn">Tålig</button>
+              <button class="btn category-btn">Blommor</button>
+            </div>
             <h3>Pelargon</h3>
             <p>
               En vacker och lättskött blomma som trivs både inne och ute under
@@ -263,8 +298,12 @@
               src="/Assets/images/products/basilika.jpg"
               alt="Produktbild på basilika"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!--  Kryddor Doftande Solälskande -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Kryddor</button>
+              <button class="btn category-btn">Doftande</button>
+              <button class="btn category-btn">Solälskande</button>
+            </div>
+
             <h3>Basilika</h3>
             <p>
               En fantastisk krydda för pastarätter och sallader. Trivs bäst i
@@ -278,8 +317,11 @@
               src="/Assets/images/products/sallad.jpg"
               alt="Produktbild på isbergssallad"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!-- Snabbväxande Ätbart Grönska  -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Snabbväxande</button>
+              <button class="btn category-btn">Ätbart</button>
+              <button class="btn category-btn">Grönska</button>
+            </div>
             <h3>Sallad</h3>
             <p>
               Sallad är en av de enklaste grönsakerna att odla och ger snabba
@@ -293,8 +335,11 @@
               src="/Assets/images/products/ormbunke.jpg"
               alt="Produktbild på ormbunke"
             />
-            <!-- Lägg till kategori-knappar här om tid finns -->
-            <!--  Luftfuktande Grönska Dekorativ  -->
+            <div class="category-btn-container">
+              <button class="btn category-btn">Luftfuktande</button>
+              <button class="btn category-btn">Grönska</button>
+              <button class="btn category-btn">Dekorativ</button>
+            </div>
             <h3>Ormbunke</h3>
             <p>
               En klassisk växt som passar perfekt i badrummet eller på skuggiga
