Responsive design - tablet

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <!-- Main with productlist / productcards -->
 
       <main class="flex-justify-center-container">
-        <ul role="list" class="cards max-width border grid-col-12">
+        <ul role="list" class="cards max-width grid-col-12">
           <li class="card">
             <img
               src="/Assets/images/products/gurka.jpg"
