Add menu-icon for small device

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Planned Planthood</title>
+    <script
+      src="https://kit.fontawesome.com/bce314e193.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="grid-area-container">
@@ -30,6 +34,9 @@
             <li><a href="#" class="menu-link">Tips</a></li>
             <li><a href="#" class="menu-link">Kontakt</a></li>
           </ul>
+
+          <!-- Show Menu-icon for small device -->
+          <i class="fa-solid fa-bars menu-icon"></i>
         </nav>
       </header>
 
