--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       <!-- Header with logotype and menu -->
       <header class="flex-justify-center-container">
         <nav class="max-width">
-          <aside class="logotype-container">
+          <a href="#" class="logotype-container">
             <img
-              height="40"
               src="/Assets/images/logo-accent-clr.svg"
               alt="Planned Planthood logotype"
               class="logotype-img"
@@ -26,7 +25,7 @@
               <p>Planned</p>
               <p>Planthood</p>
             </div>
-          </aside>
+          </a>
 
           <ul role="list" class="menu">
             <li><a href="#" class="menu-link">Hem</a></li>
@@ -93,7 +92,7 @@
           <form action="" class="subscribe-form">
             <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
             <!-- Förbättra detta för god tillgänglighet. Nu är allt bara utskrivet visuellt -->
-            <div class="input-container">
+            <div class="input-container display-flex flex-space-between">
               <label for="email" class="visually-hidden"
                 >Ange din e-mail:
               </label>
