--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
       <!-- Subscribe section -->
       <section class="newsletter flex-justify-center-container">
         <article class="max-width display-flex flex-center">
-          <form action="" class="subscribe-form">
+          <form class="subscribe-form">
             <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
-            <!-- Förbättra detta för god tillgänglighet. Nu är allt bara utskrivet visuellt -->
             <div class="input-container display-flex flex-space-between">
               <label for="email" class="visually-hidden"
                 >Ange din e-mail:
@@ -101,7 +100,6 @@
                 type="email"
                 id="email"
                 placeholder="email@domain.com"
-                pattern=".+@example\.com"
                 required
               />
               <input
