Add bg-colors to category-btn/tags

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
               alt="Produktbild på gurkor"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Blommor</button>
-              <button class="btn category-btn">Ätbart</button>
-              <button class="btn category-btn">Grönska</button>
+              <button class="btn category-btn bg-flower">Blommor</button>
+              <button class="btn category-btn bg-edible">Ätbart</button>
+              <button class="btn category-btn bg-green">Grönska</button>
             </div>
 
             <h3>Gurka</h3>
@@ -150,9 +150,9 @@
               alt="Produktbild på tomater"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Solälskande</button>
-              <button class="btn category-btn">Lättodlat</button>
-              <button class="btn category-btn">Ätbart</button>
+              <button class="btn category-btn bg-sunloving">Solälskande</button>
+              <button class="btn category-btn bg-easy">Lättodlat</button>
+              <button class="btn category-btn bg-edible">Ätbart</button>
             </div>
 
             <h3>Tomat</h3>
@@ -170,10 +170,10 @@
             />
 
             <div class="category-btn-container">
-              <button class="btn category-btn">Dekorativ</button>
-              <button class="btn category-btn">Färgstark</button>
-              <button class="btn category-btn">Tålig</button>
-              <button class="btn category-btn">Blommor</button>
+              <button class="btn category-btn bg-decorative">Dekorativ</button>
+              <button class="btn category-btn bg-colorful">Färgstark</button>
+              <button class="btn category-btn bg-robust">Tålig</button>
+              <button class="btn category-btn bg-flower">Blommor</button>
             </div>
             <h3>Pelargon</h3>
             <p>
@@ -189,9 +189,9 @@
               alt="Produktbild på basilika"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Kryddor</button>
-              <button class="btn category-btn">Doftande</button>
-              <button class="btn category-btn">Solälskande</button>
+              <button class="btn category-btn bg-spicy">Kryddor</button>
+              <button class="btn category-btn bg-fragrant">Doftande</button>
+              <button class="btn category-btn bg-sunloving">Solälskande</button>
             </div>
 
             <h3>Basilika</h3>
@@ -208,9 +208,9 @@
               alt="Produktbild på isbergssallad"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Snabbväxande</button>
-              <button class="btn category-btn">Ätbart</button>
-              <button class="btn category-btn">Grönska</button>
+              <button class="btn category-btn bg-fast">Snabbväxande</button>
+              <button class="btn category-btn bg-edible">Ätbart</button>
+              <button class="btn category-btn bg-green">Grönska</button>
             </div>
             <h3>Sallad</h3>
             <p>
@@ -226,9 +226,9 @@
               alt="Produktbild på ormbunke"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Luftfuktande</button>
-              <button class="btn category-btn">Grönska</button>
-              <button class="btn category-btn">Dekorativ</button>
+              <button class="btn category-btn bg-air">Luftfuktande</button>
+              <button class="btn category-btn bg-green">Grönska</button>
+              <button class="btn category-btn bg-decorative">Dekorativ</button>
             </div>
             <h3>Ormbunke</h3>
             <p>
@@ -244,9 +244,9 @@
               alt="Produktbild på gurkor"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Blommor</button>
-              <button class="btn category-btn">Ätbart</button>
-              <button class="btn category-btn">Grönska</button>
+              <button class="btn category-btn bg-flower">Blommor</button>
+              <button class="btn category-btn bg-edible">Ätbart</button>
+              <button class="btn category-btn bg-green">Grönska</button>
             </div>
 
             <h3>Gurka</h3>
@@ -264,9 +264,9 @@
               alt="Produktbild på tomater"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Solälskande</button>
-              <button class="btn category-btn">Lättodlat</button>
-              <button class="btn category-btn">Ätbart</button>
+              <button class="btn category-btn bg-sunloving">Solälskande</button>
+              <button class="btn category-btn bg-easy">Lättodlat</button>
+              <button class="btn category-btn bg-edible">Ätbart</button>
             </div>
 
             <h3>Tomat</h3>
@@ -284,10 +284,10 @@
             />
 
             <div class="category-btn-container">
-              <button class="btn category-btn">Dekorativ</button>
-              <button class="btn category-btn">Färgstark</button>
-              <button class="btn category-btn">Tålig</button>
-              <button class="btn category-btn">Blommor</button>
+              <button class="btn category-btn bg-decorative">Dekorativ</button>
+              <button class="btn category-btn bg-colorful">Färgstark</button>
+              <button class="btn category-btn bg-robust">Tålig</button>
+              <button class="btn category-btn bg-flower">Blommor</button>
             </div>
             <h3>Pelargon</h3>
             <p>
@@ -303,9 +303,9 @@
               alt="Produktbild på basilika"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Kryddor</button>
-              <button class="btn category-btn">Doftande</button>
-              <button class="btn category-btn">Solälskande</button>
+              <button class="btn category-btn bg-spicy">Kryddor</button>
+              <button class="btn category-btn bg-fragrant">Doftande</button>
+              <button class="btn category-btn bg-sunloving">Solälskande</button>
             </div>
 
             <h3>Basilika</h3>
@@ -322,9 +322,9 @@
               alt="Produktbild på isbergssallad"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Snabbväxande</button>
-              <button class="btn category-btn">Ätbart</button>
-              <button class="btn category-btn">Grönska</button>
+              <button class="btn category-btn bg-fast">Snabbväxande</button>
+              <button class="btn category-btn bg-edible">Ätbart</button>
+              <button class="btn category-btn bg-green">Grönska</button>
             </div>
             <h3>Sallad</h3>
             <p>
@@ -340,9 +340,9 @@
               alt="Produktbild på ormbunke"
             />
             <div class="category-btn-container">
-              <button class="btn category-btn">Luftfuktande</button>
-              <button class="btn category-btn">Grönska</button>
-              <button class="btn category-btn">Dekorativ</button>
+              <button class="btn category-btn bg-air">Luftfuktande</button>
+              <button class="btn category-btn bg-green">Grönska</button>
+              <button class="btn category-btn bg-decorative">Dekorativ</button>
             </div>
             <h3>Ormbunke</h3>
             <p>
