Add new css-classes to elements inside the card and add flex-grow to class plant-description for a cleaner layout

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <img
               src="/Assets/images/products/gurka.jpg"
               alt="Produktbild på gurkor"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-flower">Blommor</button>
@@ -136,7 +137,7 @@
             </div>
 
             <h3>Gurka</h3>
-            <p>
+            <p class="plant-description">
               Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
               bara man är noga med vattning, omplantering, duschning och
               gödsling.
@@ -146,6 +147,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/66"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -159,6 +161,7 @@
             <img
               src="/Assets/images/products/tomat.jpg"
               alt="Produktbild på tomater"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-sunloving">Solälskande</button>
@@ -167,7 +170,7 @@
             </div>
 
             <h3>Tomat</h3>
-            <p>
+            <p class="plant-description">
               En perfekt grönsak att odla på balkongen eller i trädgården. Ger
               riklig skörd under sommaren.
             </p>
@@ -176,6 +179,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/80"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -189,6 +193,7 @@
             <img
               src="/Assets/images/products/pelargon.jpg"
               alt="Produktbild på rosa pelargoner"
+              class="plant-img"
             />
 
             <div class="category-btn-container">
@@ -198,7 +203,7 @@
               <button class="btn category-btn bg-flower">Blommor</button>
             </div>
             <h3>Pelargon</h3>
-            <p>
+            <p class="plant-description">
               En vacker och lättskött blomma som trivs både inne och ute under
               sommaren.
             </p>
@@ -207,6 +212,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/5"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -220,6 +226,7 @@
             <img
               src="/Assets/images/products/basilika.jpg"
               alt="Produktbild på basilika"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-spicy">Kryddor</button>
@@ -228,7 +235,7 @@
             </div>
 
             <h3>Basilika</h3>
-            <p>
+            <p class="plant-description">
               En fantastisk krydda för pastarätter och sallader. Trivs bäst i
               ett soligt fönster.
             </p>
@@ -237,6 +244,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/56"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -250,6 +258,7 @@
             <img
               src="/Assets/images/products/sallad.jpg"
               alt="Produktbild på isbergssallad"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-fast">Snabbväxande</button>
@@ -257,7 +266,7 @@
               <button class="btn category-btn bg-green">Grönska</button>
             </div>
             <h3>Sallad</h3>
-            <p>
+            <p class="plant-description">
               Sallad är en av de enklaste grönsakerna att odla och ger snabba
               resultat för färska måltider.
             </p>
@@ -266,6 +275,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/11"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -279,6 +289,7 @@
             <img
               src="/Assets/images/products/ormbunke.jpg"
               alt="Produktbild på ormbunke"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-air">Luftfuktande</button>
@@ -286,7 +297,7 @@
               <button class="btn category-btn bg-decorative">Dekorativ</button>
             </div>
             <h3>Ormbunke</h3>
-            <p>
+            <p class="plant-description">
               En klassisk växt som passar perfekt i badrummet eller på skuggiga
               platser.
             </p>
@@ -295,6 +306,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/45"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -308,6 +320,7 @@
             <img
               src="/Assets/images/products/gurka.jpg"
               alt="Produktbild på gurkor"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-flower">Blommor</button>
@@ -316,7 +329,7 @@
             </div>
 
             <h3>Gurka</h3>
-            <p>
+            <p class="plant-description">
               Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
               bara man är noga med vattning, omplantering, duschning och
               gödsling.
@@ -326,6 +339,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/66"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -339,6 +353,7 @@
             <img
               src="/Assets/images/products/tomat.jpg"
               alt="Produktbild på tomater"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-sunloving">Solälskande</button>
@@ -347,7 +362,7 @@
             </div>
 
             <h3>Tomat</h3>
-            <p>
+            <p class="plant-description">
               En perfekt grönsak att odla på balkongen eller i trädgården. Ger
               riklig skörd under sommaren.
             </p>
@@ -356,6 +371,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/80"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -369,6 +385,7 @@
             <img
               src="/Assets/images/products/pelargon.jpg"
               alt="Produktbild på rosa pelargoner"
+              class="plant-img"
             />
 
             <div class="category-btn-container">
@@ -378,7 +395,7 @@
               <button class="btn category-btn bg-flower">Blommor</button>
             </div>
             <h3>Pelargon</h3>
-            <p>
+            <p class="plant-description">
               En vacker och lättskött blomma som trivs både inne och ute under
               sommaren.
             </p>
@@ -387,6 +404,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/5"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -400,6 +418,7 @@
             <img
               src="/Assets/images/products/basilika.jpg"
               alt="Produktbild på basilika"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-spicy">Kryddor</button>
@@ -408,7 +427,7 @@
             </div>
 
             <h3>Basilika</h3>
-            <p>
+            <p class="plant-description">
               En fantastisk krydda för pastarätter och sallader. Trivs bäst i
               ett soligt fönster.
             </p>
@@ -417,6 +436,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/56"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -430,6 +450,7 @@
             <img
               src="/Assets/images/products/sallad.jpg"
               alt="Produktbild på isbergssallad"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-fast">Snabbväxande</button>
@@ -437,7 +458,7 @@
               <button class="btn category-btn bg-green">Grönska</button>
             </div>
             <h3>Sallad</h3>
-            <p>
+            <p class="plant-description">
               Sallad är en av de enklaste grönsakerna att odla och ger snabba
               resultat för färska måltider.
             </p>
@@ -446,6 +467,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/11"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
@@ -459,6 +481,7 @@
             <img
               src="/Assets/images/products/ormbunke.jpg"
               alt="Produktbild på ormbunke"
+              class="plant-img"
             />
             <div class="category-btn-container">
               <button class="btn category-btn bg-air">Luftfuktande</button>
@@ -466,7 +489,7 @@
               <button class="btn category-btn bg-decorative">Dekorativ</button>
             </div>
             <h3>Ormbunke</h3>
-            <p>
+            <p class="plant-description">
               En klassisk växt som passar perfekt i badrummet eller på skuggiga
               platser.
             </p>
@@ -475,6 +498,7 @@
                 <img
                   src="https://avatar.iran.liara.run/public/45"
                   alt="Profilbild på författaren"
+                  class="author-img"
                 />
               </figure>
 
