Add overlay to the card-images

--- a/index.html
+++ b/index.html
@@ -125,11 +125,20 @@
       <main class="flex-justify-center-container">
         <ul role="list" class="cards max-width grid-col-12">
           <li class="card">
-            <img
-              src="/Assets/images/products/gurka.jpg"
-              alt="Produktbild på gurkor"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/gurka.jpg"
+                alt="Produktbild på gurkor"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
+
             <div class="category-btn-container">
               <button class="btn category-btn bg-flower">Blommor</button>
               <button class="btn category-btn bg-edible">Ätbart</button>
@@ -158,11 +167,20 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/tomat.jpg"
-              alt="Produktbild på tomater"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/tomat.jpg"
+                alt="Produktbild på tomater"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
+
             <div class="category-btn-container">
               <button class="btn category-btn bg-sunloving">Solälskande</button>
               <button class="btn category-btn bg-easy">Lättodlat</button>
@@ -190,11 +208,19 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/pelargon.jpg"
-              alt="Produktbild på rosa pelargoner"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/pelargon.jpg"
+                alt="Produktbild på rosa pelargoner"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
 
             <div class="category-btn-container">
               <button class="btn category-btn bg-decorative">Dekorativ</button>
@@ -223,11 +249,19 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/basilika.jpg"
-              alt="Produktbild på basilika"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/basilika.jpg"
+                alt="Produktbild på basilika"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
             <div class="category-btn-container">
               <button class="btn category-btn bg-spicy">Kryddor</button>
               <button class="btn category-btn bg-fragrant">Doftande</button>
@@ -255,11 +289,20 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/sallad.jpg"
-              alt="Produktbild på isbergssallad"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/sallad.jpg"
+                alt="Produktbild på isbergssallad"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
+
             <div class="category-btn-container">
               <button class="btn category-btn bg-fast">Snabbväxande</button>
               <button class="btn category-btn bg-edible">Ätbart</button>
@@ -286,11 +329,19 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/ormbunke.jpg"
-              alt="Produktbild på ormbunke"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/ormbunke.jpg"
+                alt="Produktbild på ormbunke"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
             <div class="category-btn-container">
               <button class="btn category-btn bg-air">Luftfuktande</button>
               <button class="btn category-btn bg-green">Grönska</button>
@@ -317,11 +368,20 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/gurka.jpg"
-              alt="Produktbild på gurkor"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/gurka.jpg"
+                alt="Produktbild på gurkor"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
+
             <div class="category-btn-container">
               <button class="btn category-btn bg-flower">Blommor</button>
               <button class="btn category-btn bg-edible">Ätbart</button>
@@ -350,11 +410,20 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/tomat.jpg"
-              alt="Produktbild på tomater"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/tomat.jpg"
+                alt="Produktbild på tomater"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
+
             <div class="category-btn-container">
               <button class="btn category-btn bg-sunloving">Solälskande</button>
               <button class="btn category-btn bg-easy">Lättodlat</button>
@@ -382,11 +451,19 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/pelargon.jpg"
-              alt="Produktbild på rosa pelargoner"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/pelargon.jpg"
+                alt="Produktbild på rosa pelargoner"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
 
             <div class="category-btn-container">
               <button class="btn category-btn bg-decorative">Dekorativ</button>
@@ -415,11 +492,19 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/basilika.jpg"
-              alt="Produktbild på basilika"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/basilika.jpg"
+                alt="Produktbild på basilika"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
             <div class="category-btn-container">
               <button class="btn category-btn bg-spicy">Kryddor</button>
               <button class="btn category-btn bg-fragrant">Doftande</button>
@@ -447,11 +532,20 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/sallad.jpg"
-              alt="Produktbild på isbergssallad"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/sallad.jpg"
+                alt="Produktbild på isbergssallad"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
+
             <div class="category-btn-container">
               <button class="btn category-btn bg-fast">Snabbväxande</button>
               <button class="btn category-btn bg-edible">Ätbart</button>
@@ -478,11 +572,19 @@
             </footer>
           </li>
           <li class="card">
-            <img
-              src="/Assets/images/products/ormbunke.jpg"
-              alt="Produktbild på ormbunke"
-              class="plant-img"
-            />
+            <figure class="plant-img-container">
+              <img
+                src="/Assets/images/products/ormbunke.jpg"
+                alt="Produktbild på ormbunke"
+                class="plant-img"
+              />
+              <!--I have deliberately left alt blank as this is an overlay that has a purely decorative purpose -->
+              <img
+                class="overlay"
+                src="/Assets/images/icon-seedling.svg"
+                alt=""
+              />
+            </figure>
             <div class="category-btn-container">
               <button class="btn category-btn bg-air">Luftfuktande</button>
               <button class="btn category-btn bg-green">Grönska</button>
@@ -510,6 +612,9 @@
           </li>
         </ul>
       </main>
+
+      <!-- Overlay
+      <img src="/Assets/images/icon-seedling.svg" alt="" /> -->
 
       <!-- Inspiration section -->
       <section class="plants-inspiration flex-justify-center-container">
