--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img
               height="90"
               src="/Assets/images/icon-planting.svg"
-              alt="Fröpåse som det hälls frön ifrån. Planetering pågår."
+              alt="Fröpåse som det hälls frön ifrån. Plantering pågår."
             />
           </figure>
         </article>
@@ -613,9 +613,6 @@
         </ul>
       </main>
 
-      <!-- Overlay
-      <img src="/Assets/images/icon-seedling.svg" alt="" /> -->
-
       <!-- Inspiration section -->
       <section class="plants-inspiration flex-justify-center-container">
         <article class="max-width display-flex flex-center">
@@ -640,6 +637,7 @@
         </article>
       </section>
 
+      <!-- Footer of the page -->
       <footer class="page-footer flex-justify-center-container">
         <div class="display-flex flex-space-between max-width">
           <article class="contact-info display-flex flex-column gap-standard">
